@@ -1,3 +1,7 @@
-#PassReader
+<h2>PassReader</h2>
 
 Simple Password Manager developed in java with javafx
+
+<h3>Build and Run</h3>
+
+java --module-path "lib\javafx-sdk-22.0.1\lib" --add-modules javafx.controls,javafx.fxml -jar '.\out\out\artifacts\Passreader_2_0_jar\Passreader 2.0.jar'
